Add Tindog website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Hello World!</p>
+    <br>
+    <a href="https://hariom-jha01.github.io/Tindog-website/">Tindog-website</a>
 </body>
 </html>
